[package]
name = "advent-of-code2024"
version = "0.1.0"
edition = "2021"
description = "Advent of Code 2024"
repository = "https://github.com/evalott100/advent-of-code2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.uuid]
version = "1.11.0"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
